# collection

./: CMakeLists.txt  base.c  collection.h  conanfile.py  queue.h  setup.sh
include/: base.h  bptree.h  collection.h  queue.h  stack.h
src/: bptree.c  collection.c  queue.c  stack.c
